# Aurora

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
Editor/: CMakeLists.txt
Editor/Public/Core/: Application.cpp  Application.hpp
Editor/Public/Core/Frontend/: EditorUI.cpp  EditorUI.hpp  ImGuiBackend.cpp  ImGuiBackend.hpp  ImGuiInput.cpp  ImGuiInput.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp
Editor/Public/Screen/: Main.cpp  Main.hpp
Engine/: CMakeLists.txt
Engine/Private/Aurora.Audio/Driver/: FAudioDriver.cpp  FAudioDriver.hpp
Engine/Private/Aurora.Content/Material/: Loader.cpp  Loader.hpp
Engine/Private/Aurora.Content/Pipeline/: Loader.cpp  Loader.hpp
Engine/Public/Aurora.Audio/: Codec.cpp  Codec.hpp  Common.hpp  Decoder.hpp  Driver.hpp  Emitter.hpp  Listener.cpp  Listener.hpp  Service.cpp  Service.hpp  Sound.cpp  Sound.hpp
Engine/Public/Aurora.Base/: Base.hpp  Bit.hpp  Collection.cpp  Collection.hpp  Compiler.cpp  Compiler.hpp  Concurrency.cpp  Concurrency.hpp  Enum.cpp  Enum.hpp  Log.cpp  Log.hpp  Primitive.cpp  Primitive.hpp  Profiler.cpp  Profiler.hpp  Scalar.cpp  Scalar.hpp  Text.cpp  Text.hpp  Time.hpp  Trait.cpp  Trait.hpp  Utility.cpp  Utility.hpp
Engine/Public/Aurora.Base/Domain/: Provider.cpp  Provider.hpp  Service.cpp  Service.hpp  System.hpp
Engine/Public/Aurora.Base/Memory/: Blob.cpp  Blob.hpp  Handle.hpp  Pool.hpp  Trackable.cpp  Trackable.hpp  Tracker.cpp  Tracker.hpp
Engine/Public/Aurora.Base/Serialization/: Archive.cpp  Archive.hpp  Reader.hpp  Writer.hpp
Engine/Public/Aurora.Content/: Cache.cpp  Cache.hpp  Loader.hpp  Mount.cpp  Mount.hpp  Resource.cpp  Resource.hpp  Scope.cpp  Scope.hpp  Service.cpp  Service.hpp  Uri.hpp
Engine/Public/Aurora.Engine/: Device.cpp  Device.hpp  Kernel.cpp  Kernel.hpp  Properties.cpp  Properties.hpp
Engine/Public/Aurora.Graphic/: Camera.cpp  Camera.hpp  Color.hpp  Common.hpp  Driver.hpp  Encoder.cpp  Encoder.hpp  Font.cpp  Font.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Service.cpp  Service.hpp  Texture.cpp  Texture.hpp
Engine/Public/Aurora.Input/: Common.hpp  Keyboard.cpp  Keyboard.hpp  Listener.cpp  Listener.hpp  Mouse.cpp  Mouse.hpp  Poller.cpp  Poller.hpp  Service.cpp  Service.hpp
Engine/Public/Aurora.Math/: Easing.cpp  Easing.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Pivot.cpp  Pivot.hpp  Quaternion.hpp  Transform.hpp  Tween.cpp  Tween.hpp  Vector2.hpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Engine/Public/Aurora.Scene/: Common.hpp  Component.hpp  Entity.cpp  Entity.hpp  Factory.cpp  Factory.hpp  Query.hpp  Service.cpp  Service.hpp  Tag.cpp  Tag.hpp
Engine/Resources/Font/: Roboto.arfont
Engine/Resources/Material/: Default.material
Engine/Resources/Pipeline/: MSDF.effect  MSDF.shader  Primitive.effect  Sprite.effect  Sprite.shader
Example/: CMakeLists.txt
Example/Private/: Application.cpp  Application.hpp
Example/Private/Component/: TextComponent.cpp  TextComponent.hpp
Example/Private/Experimental/: Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  TextSystem.hpp
Example/Resources/Font/: Primary.arfont
Example/Resources/Material/: Test.material
Example/Resources/Pipeline/: Sprite.effect  Sprite.shader
Source/: CMakeLists.txt
Source/Demo/: CMakeLists.txt  Main.cpp  Renderer.cpp  Renderer.hpp
Source/Foundation/: CMakeLists.txt
Source/Foundation/Scripts/: CMakeRC.cmake
Source/Proxy/: CMakeLists.txt
Source/Proxy/Public/: Proxy.cpp  Proxy.rc
Source/Public/Audio/: Common.cpp  Common.hpp  Decoder.hpp  Driver.hpp  Service.cpp  Service.hpp  Sound.cpp  Sound.hpp
Source/Public/Aurora.Audio/: Common.hpp  Decoder.cpp  Driver.hpp  Emitter.hpp  Listener.hpp  Service.cpp  Service.hpp  Sound.cpp  Sound.hpp
Source/Public/Aurora.Base/: Base.cpp  Base.hpp  Trait.hpp  Type.hpp
Source/Public/Aurora.Content/: Factory.hpp  Loader.hpp  Locator.hpp  Resource.hpp  Service.cpp  Service.hpp  Uri.hpp
Source/Public/Aurora.Engine/: Device.cpp  Device.hpp  Kernel.cpp  Kernel.hpp  Properties.cpp  Properties.hpp
Source/Public/Aurora.Graphic/: Camera.cpp  Camera.hpp  Common.hpp  Driver.hpp  Encoder.cpp  Encoder.hpp  Font.cpp  Font.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Service.cpp  Service.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Source/Public/Aurora.Input/: Common.hpp  Keyboard.cpp  Listener.cpp  Listener.hpp  Mouse.cpp  Mouse.hpp  Poller.cpp  Poller.hpp  Service.cpp  Service.hpp
Source/Public/Aurora.Math/: Color.hpp  Interpolator.hpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Rect.hpp  Transform.hpp  Trigonometry.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Source/Public/Aurora.Network/: Client.hpp  Driver.hpp  Packet.hpp  Protocol.cpp  Server.cpp  Server.hpp  Service.cpp  Service.hpp
Source/Public/Aurora.Renderer/: Encoder.cpp  Encoder.hpp  Font.cpp  Font.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp
Source/Public/Content/: Loader.cpp  Loader.hpp  Locator.hpp  Resource.cpp  Resource.hpp  Service.cpp  Service.hpp
Source/Public/Core/: Core.hpp  Trait.cpp  Trait.hpp  Types.cpp  Types.hpp
Source/Public/Engine/: Activity.cpp  Activity.hpp  Host.cpp  Host.hpp  Kernel.cpp  Kernel.hpp  Properties.cpp
Source/Public/Graphic/: Camera.cpp  Camera.hpp  Common.hpp  Driver.hpp  Encoder.cpp  Encoder.hpp  Font.cpp  Font.hpp  Material.hpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Service.cpp  Service.hpp  Texture.cpp  Texture.hpp
Source/Public/Input/: Common.hpp  Device.cpp  Device.hpp  Listener.cpp  Listener.hpp  Mouse.cpp  Service.cpp  Service.hpp
Source/Public/Network/: Channel.cpp  Channel.hpp  Client.hpp  Driver.hpp  Packet.hpp  Protocol.cpp  Protocol.hpp  Server.cpp  Server.hpp  Service.cpp  Service.hpp  Session.hpp  Statistics.cpp  Statistics.hpp
Source/Public/Platform/: Service.cpp  Service.hpp  Window.hpp
Source/Public/UI/: Common.hpp  Driver.cpp  Driver.hpp  Service.cpp  Service.hpp
Source/Resources/Pipeline/: Font.effect  Font.shader  Geometry.effect  Geometry.shader  MSDF.effect  UI.effect  UI.shader
(+713 files in other folders)
